--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -26,3 +26,8 @@
     Icon for the plugin added (icon.png)
     protocols.conf added so protocol is shown on the left tree
     reference added
+
+3 October-2019 - 14:22 - (tagged with 5.adding-scalar-parameters)
+    Hello world protocol has 2 parameter:
+        1.- message: to enter the message to print
+        2.- times: to print them message that number ot times.
